2025-02-07T01:01:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13190982387 # 558
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-07
* notice: last 14d: unq all: 11 19
* notice: prev accum: outdated-unq outdated-all / unq all: 438 828 / 453 846
* notice: next accum: outdated-unq outdated-all / unq all: 438 828 / 454 847
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-06]

2025-02-06T01:01:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13169621111 # 557
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-06
* notice: last 14d: unq all: 11 18
* notice: prev accum: outdated-unq outdated-all / unq all: 438 828 / 452 845
* notice: next accum: outdated-unq outdated-all / unq all: 438 828 / 453 846
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-05]

2025-02-05T01:01:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13147956137 # 556
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-05
* notice: last 14d: unq all: 11 17
* notice: prev accum: outdated-unq outdated-all / unq all: 438 828 / 451 844
* notice: next accum: outdated-unq outdated-all / unq all: 438 828 / 452 845
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-04]

2025-02-04T01:00:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13126074968 # 555