@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-07T01:01:42Z",
+  "timestamp" : "2025-02-08T00:59:38Z",
   "count_outdated" : 828,
   "uniques_outdated" : 438,
-  "count" : 847,
-  "uniques" : 454,
+  "count" : 848,
+  "uniques" : 455,
   "clones" : [
     {
       "timestamp": "2025-01-31T00:00:00Z",
@@ -61,6 +61,15 @@
     },
     {
       "timestamp": "2025-02-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
