@@ -1,5 +1,5 @@
 {
-  "count": 19,
+  "count": 20,
   "uniques": 11,
   "clones": [
     {
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2025-02-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-07T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
